<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">starfish</string>

    <!-- Main activity -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_camera_test">CameraTestActivity</string>
    <string name="title_activity_bluetooth_setup">Choose a device</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">TestPictures</string>
    <string name="bluetooth_start_text">Connect to Device</string>

    <!-- Camera test activity -->


    <!-- Bluetooth Setup -->
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_discovered_devices">Discovered Devices</string>
    <string name="none_paired"> No other Bluetooth devices paired.</string>

    <!-- No Bluetooth Dialog -->
    <string name="no_bluetooth_support_message">Sorry, your device does not support a Bluetooth connection. 
        Please connect to your device using a cable.</string>
    <string name="calibrate_screen_text">Calibration Settings</string>
    <string name="led_test_text">Test LEDs</string>
    <string name="pump_test_text">Test Pump</string>
    <string name="heat_test_text">Test Heat</string>
    <string name="valves_test_text">Test Valves</string>
    <string name="calibrate_button_text">Test All</string>
    <string name="title_activity_calibrate_screen">Calibration Settings</string>

</resources>