<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/test_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/checkmark"
        android:onClick="testAll"
        android:text="@string/calibrate_button_text" />
    
    <Button
        android:id="@+id/led_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ledTest"
        android:text="@string/led_test_text" />
    
    <Button
        android:id="@+id/pump_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pumpTest"
        android:text="@string/pump_test_text" />
    
    <Button
        android:id="@+id/heat_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="heatTest"
        android:text="@string/heat_test_text" />
    
    <Button
        android:id="@+id/valves_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="valvesTest"
        android:text="@string/valves_test_text" />
</LinearLayout>